Footer changes done

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,23 @@
 	height: 150px;
 }
 
+#map {
+        width: 100%;
+        height: 400px;
+        background-color: grey;
+      }
+
+ #section_map p {
+ 	text-align: center;
+ 	margin-top:20px;
+ 	font-weight: bolder;
+ }     
+
+a.disabled {
+  pointer-events: none;
+  cursor: default;
+}
+
 /* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -2096,8 +2113,8 @@
 
 	.wrapper {
 		background: #fff;
-		margin: 0 0 2em 0;
-		padding: 6em 0 6em 0;
+		margin: 0 0 0.2em 0;
+		padding: 4em 0 6em 0;
 	}
 
 		.wrapper.style2 {
@@ -2423,7 +2440,7 @@
 
 			#footer .contact p {
 				text-align: center;
-				margin: 0 0 3em 0;
+				margin: 0 0 2em 0;
 			}
 
 		#footer .copyright {
