--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -11,6 +11,10 @@
 
 /*b0uda css*/
 
+
+
+// header config
+
 #project-demand-header{
 	text-align: center;
 }
@@ -18,6 +22,9 @@
 #icrossing-services article a img{
 	height: 150px;
 }
+
+
+// google map
 
 #map {
         width: 100%;
@@ -32,13 +39,10 @@
  	font-weight: bolder;
  }     
 
- h2{
- 	text-align: center;
- 	margin-bottom: 40px;
- 	margin-top: -50px;
- }
+
 }
 
+// ????? lien desactive ???
 
 a.disabled {
   pointer-events: none;
@@ -49,19 +53,6 @@ a.disabled {
 
 .demo-card-wide.mdl-card {
   width: 100%;
-}
-.demo-card-wide > .mdl-card__title {
-  color: #fff;
-  height: 176px;
-  background: url('../../images/b0uda_conatctus.jpg') center / cover;
-}
-.demo-card-wide > .mdl-card__menu {
-  color: #fff;
-}
-
-.mdl-card__supporting-text{
-	text-align: center;
-	
 }
 
 /* Reset */
@@ -3108,18 +3099,44 @@ a.disabled {
 
 	}
 
-	// Delete default background and border from inputs done by the template
+	//  contact us container
 
-.mdl-card__supporting-text form{
+.form-contact-container {
+
+// contact us form
+
+ form{
+
+text-align: center;
+
+padding: 1em 0 1em 0;
+
+p{
+	color: #000;
+	text-align: center;
+}
+
+div{
+	margin-bottom: 5%;
+}
 	input{
-border: 0;
-  background: #fff;
+	border: 0;
+	color: #000;
+
+ 
 	}
-	
+	textarea{
+		color: #000;
+	}
+
 	label{
 		font-size: 1em; 
 	}
+ }
+
 }
+
+
 
 // Contact form input delete padding from mdl framework
 
@@ -3134,4 +3151,18 @@ border: 0;
     bottom: 0;
 }
 
+// footer rewrite
 
+#footer{
+	padding-bottom: 1em;
+	padding-top: 1em;
+}
+
+#footer section h2{
+	text-align: center;
+	margin-bottom: 0.5em;
+}
+
+.contact-header2{
+padding-bottom: 15px;
+}
