--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600");
 @import url("font-awesome.min.css");
+@import url("https://fonts.googleapis.com/css?family=Aladin");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
 /*
 	Helios by HTML5 UP
 	html5up.net | @ajlkn
@@ -1378,7 +1380,7 @@ header .icon.circled {
 /* Header */
 #header {
   position: relative;
-  background-image: url("../../images/b0uda_header_icrossing.jpg");
+  background-image: url("../../images/header_background_icrossing3.jpg");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -2077,10 +2079,11 @@ body.homepage.is-loading #header:after {
 
 .form-contact-container form {
   text-align: center;
-  padding: 1em 0 1em 0; }
+  padding: 2em 0 1em 0; }
   .form-contact-container form p {
     color: #000;
-    text-align: center; }
+    text-align: center;
+    margin-bottom: 2em; }
   .form-contact-container form div {
     margin-bottom: 5%; }
   .form-contact-container form input {
