--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,6 +24,9 @@
   margin-top: 35px;
   font-weight: bolder; }
 
+.btn-new-color {
+  background-color: black; }
+
 a.disabled {
   pointer-events: none;
   cursor: default; }
@@ -1380,7 +1383,7 @@ header .icon.circled {
 /* Header */
 #header {
   position: relative;
-  background-image: url("../../images/header_background_icrossing.jpg");
+  background-image: url("../../images/icrossing_header_background.jpg");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -2083,7 +2086,9 @@ body.homepage.is-loading #header:after {
   .form-contact-container form p {
     color: #000;
     text-align: center;
-    margin-bottom: 2em; }
+    margin-bottom: 2em;
+    font-size: 1.3em;
+    font-family: Roboto condensed; }
   .form-contact-container form div {
     margin-bottom: 5%; }
   .form-contact-container form input {
