--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -50,6 +50,11 @@
 
 // ????? lien desactive ???
 
+
+.btn-new-color{
+	background-color: black;
+}
+
 a.disabled {
   pointer-events: none;
   cursor: default;
@@ -2151,7 +2156,7 @@ a.disabled {
 
 	#header {
 		position: relative;
-		background-image: url("../../images/header_background_icrossing.jpg");
+		background-image: url("../../images/icrossing_header_background.jpg");
 		background-size: cover;
 		background-position: center center;
 		background-attachment: fixed;
@@ -3121,6 +3126,8 @@ p{
 	color: #000;
 	text-align: center;
 	margin-bottom: 2em;
+	font-size: 1.3em;
+    font-family: Roboto condensed;
 }
 
 div{
